scrollbar styles fix

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -12,19 +12,20 @@
 	row-gap: inherit;
 	overflow-x: hidden;
 	overflow-y: auto;
-	margin-right: calc(var(--offset-base-size) * -5);
+	margin-right: calc(var(--offset-base-size) * -4);
 	width: calc(100% + var(--offset-base-size) * 5);
+	padding-right: calc(var(--offset-base-size) * 2);
 }
 
 .item {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-    justify-content: flex-end;
+	display: flex;
+	align-items: center;
+	column-gap: 8px;
+	justify-content: flex-end;
 }
 
 .footer {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
 }
